<resources>
    <string name="app_name">Golie</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_category">Specific Category</string>
    <string name="title_shop">Shop</string>
    <string name="yourpoints">Your points:</string>
    <string name="create_reward">Create Reward</string>
    <string name="create_title">Title:</string>
    <string name="create_points">points:</string>
    <string name="create_confirm">Confirm</string>
    <string name="addGoal_titleText">Title:</string>
    <string name="addGoal_invalidTitleMinLength">You must enter a title!</string>
    <string name="addGoal_invalidTitleMaxLength">Title is too long! Max 30 characters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop_rewards">Rewards:</string>
    <string name="addGoal_createGoal">Create Goal!</string>
    <string name="addGoal_points">Points:</string>
    <string name="addGoal_reoccurring">Reoccurring:</string>
    <string name="addGoal_timeSpan">Time span:</string>
    <string name="addGoal_insertTitle">insert title here…</string>
    <string name="addGoal_dateFormat">yyyy-mm-dd</string>
    <string name="addGoal_pointsExample">10 points</string>
    <string name="dialog_title">Completed or failed the goal? \nDecide what to do: </string>
    <string name="dialog_manageGoal">Manage your goal:</string>
    <string name="editGoal">Edit Goal</string>
    <string name="dialog_failedGoal">Failed Goal</string>
    <string name="dialog_finishedGoal">Finished Goal</string>
    <string name="dialog_deleteGoal">Delete Goal</string>
    <string name="dialog_return">Return to Goals</string>
    <string name="updateGoal">Update Goal!</string>
    <string name="goal_item_title">Title</string>
    <string name="finishedGoalFragment_celebration">celebration</string>
    <string name="finishedGoalFragment_congratulations">Congratulations!</string>
    <string name="finishedGoalButton">Back to goals</string>
    <string name="deleting_goal">deleting goal</string>
    <string name="return_goal">return</string>
    <string name="onDbFailureMessage">A connection error occurred.</string>
    <string name="categoryId" translatable="false">categoryId</string>
    <string name="userId" translatable="false">userId</string>
    <string name="goalValidator_title">Title: Must enter a title.</string>
    <string name="goalValidator_titleMax">Title: It\'s too long. Max 30 characters</string>
    <string name="goalValidator_points">Points: You need to add some points</string>
    <string name="guest" translatable="false">Guest</string>
    <string name="categoryFragment_deleted">You have deleted your favorite category :(</string>
    <string name="addCategory_validationError">\"The following validation error occurred: \"</string>
    <string name="categoryValidator_title">Must enter a title!</string>
    <string name="categoryValidator_titleMax">\"The title is too long! Please enter a title with max \"</string>
    <string name="categoryValidator_characters">\" characters.\"</string>
    <string name="homeFragment_dialog_title">Settings</string>
    <string name="homeFragment_dialog_message">What do you want to do?</string>
    <string name="homeFragment_dialog_buttonText">View info page</string>
    <string name="homeFragment_dialog_login">Login</string>
    <string name="homeFragment_dialog_selectFavorite">Select favorite category</string>
    <string name="homeFragment_dialog_viewInfo">View info page</string>
    <string name="homeFragment_dialog_logout">Logout</string>
    <string name="createReward_validationError">\"The following validation error occurred: \"</string>
    <string name="rewardValidator_title">Must enter a title!</string>
    <string name="rewardValidator_titleMax">\"The title is too long! Please enter a title with max \"</string>
    <string name="rewardValidator_characters">\" characters.\"</string>
    <string name="rewardValidator_points">Must enter a point score!</string>
    <string name="choose_favorite_category">Choose favorite category!</string>
    <string name="this_is_your_name">This is your name</string>
    <string name="you_need_to_be_logged_in_with_google_in_order_to_add_or_delete_categories_and_goals">You need to be logged in with google in order to add or delete categories and goals</string>
    <string name="enjoy_your_reward">Enjoy Your Reward</string>
    <string name="your_new_balance_is">Your new balance is:</string>
    <string name="thank_you">Thank You</string>
    <string name="are_you_sure_you_want_to_buy_this">Are you sure you want to buy this</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="oh_no">Oh No! :(</string>
    <string name="better_luck_next_time">better luck next time</string>
    <string name="not_enough_money_yet">Not enough money yet</string>
    <string name="got_questions_look_here">Got questions? Look here!</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_fusce_sagittis_augue_turpis_eget_rutrum_libero_venenatis_dictum_nullam_vitae_mauris_sed_dui_lacinia_aliquam_aenean_placerat_risus_ex_vel_laoreet_nisl_luctus_aliquam_cras_sodales_elit_a_mauris_tempus_nec_efficitur_quam_dapibus_nunc_eleifend_maximus_ipsum_sagittis_imperdiet_urna_sollicitudin_id_aliquam_varius_libero_non_dui_ultrices_aliquam_curabitur_rutrum_est_condimentum_neque_aliquet_et_ullamcorper_dui_consequat_etiam_eget_porttitor_nunc_vestibulum_fringilla_scelerisque_urna_ac_vulputate_in_vel_ex_ipsum_proin_eget_sem_viverra_tempus_metus_non_semper_sapien_donec_sagittis_ultricies_elit_a_varius_quam_consectetur_at_sed_sapien_arcu_scelerisque_at_sapien_vel_suscipit_posuere_nunc_nam_posuere_tincidunt_lorem_lobortis_bibendum_sapien_curabitur_nec_porttitor_nisi_et_tincidunt_massa_duis_posuere_consequat_magna_nulla_sed_convallis_orci_fusce_convallis_urna_in_tellus_dapibus_molestie_suspendisse_potenti_etiam_vitae_nibh_id_quam_accumsan_cursus_sed_varius_turpis_ut_elit_vulputate_a_venenatis_tellus_posuere_praesent_at_turpis_nunc_aenean_metus_nibh_consequat_id_ligula_sed_elementum_porta_risus_quisque_quis_mi_in_mi_tempor_efficitur_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_fusce_sagittis_augue_turpis_eget_rutrum_libero_venenatis_dictum_nullam_vitae_mauris_sed_dui_lacinia_aliquam_aenean_placerat_risus_ex_vel_laoreet_nisl_luctus_aliquam_cras_sodales_elit_a_mauris_tempus_nec_efficitur_quam_dapibus_nunc_eleifend_maximus_ipsum_sagittis_imperdiet_urna_sollicitudin_id_aliquam_varius_libero_non_dui_ultrices_aliquam_curabitur_rutrum_est_condimentum_neque_aliquet_et_ullamcorper_dui_consequat_etiam_eget_porttitor_nunc_vestibulum_fringilla_scelerisque_urna_ac_vulputate_in_vel_ex_ipsum_proin_eget_sem_viverra_tempus_metus_non_semper_sapien_donec_sagittis_ultricies_elit_a_varius_quam_consectetur_at_sed_sapien_arcu_scelerisque_at_sapien_vel_suscipit_posuere_nunc_nam_posuere_tincidunt_lorem_lobortis_bibendum_sapien_curabitur_nec_porttitor_nisi_et_tincidunt_massa_duis_posuere_consequat_magna_nulla_sed_convallis_orci_fusce_convallis_urna_in_tellus_dapibus_molestie_suspendisse_potenti_etiam_vitae_nibh_id_quam_accumsan_cursus_sed_varius_turpis_ut_elit_vulputate_a_venenatis_tellus_posuere_praesent_at_turpis_nunc_aenean_metus_nibh_consequat_id_ligula_sed_elementum_porta_risus_quisque_quis_mi_in_mi_tempor_efficitur" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sagittis augue turpis, eget rutrum libero venenatis dictum. Nullam vitae mauris sed dui lacinia aliquam. Aenean placerat risus ex, vel laoreet nisl luctus aliquam. Cras sodales elit a mauris tempus, nec efficitur quam dapibus. Nunc eleifend maximus ipsum, sagittis imperdiet urna sollicitudin id. Aliquam varius libero non dui ultrices aliquam. Curabitur rutrum est condimentum neque aliquet, et ullamcorper dui consequat. Etiam eget porttitor nunc. Vestibulum fringilla scelerisque urna ac vulputate. In vel ex ipsum. Proin eget sem viverra, tempus metus non, semper sapien. Donec sagittis ultricies elit, a varius quam consectetur at. Sed sapien arcu, scelerisque at sapien vel, suscipit posuere nunc. Nam posuere tincidunt lorem, lobortis bibendum sapien. Curabitur nec porttitor nisi, et tincidunt massa. Duis posuere consequat magna. Nulla sed convallis orci. Fusce convallis urna in tellus dapibus molestie. Suspendisse potenti. Etiam vitae nibh id quam accumsan cursus. Sed varius turpis ut elit vulputate, a venenatis tellus posuere. Praesent at turpis nunc. Aenean metus nibh, consequat id ligula sed, elementum porta risus. Quisque quis mi in mi tempor efficitur.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sagittis augue turpis, eget rutrum libero venenatis dictum. Nullam vitae mauris sed dui lacinia aliquam. Aenean placerat risus ex, vel laoreet nisl luctus aliquam. Cras sodales elit a mauris tempus, nec efficitur quam dapibus. Nunc eleifend maximus ipsum, sagittis imperdiet urna sollicitudin id. Aliquam varius libero non dui ultrices aliquam. Curabitur rutrum est condimentum neque aliquet, et ullamcorper dui consequat. Etiam eget porttitor nunc. Vestibulum fringilla scelerisque urna ac vulputate. In vel ex ipsum. Proin eget sem viverra, tempus metus non, semper sapien. Donec sagittis ultricies elit, a varius quam consectetur at. Sed sapien arcu, scelerisque at sapien vel, suscipit posuere nunc. Nam posuere tincidunt lorem, lobortis bibendum sapien. Curabitur nec porttitor nisi, et tincidunt massa. Duis posuere consequat magna. Nulla sed convallis orci. Fusce convallis urna in tellus dapibus molestie. Suspendisse potenti. Etiam vitae nibh id quam accumsan cursus. Sed varius turpis ut elit vulputate, a venenatis tellus posuere. Praesent at turpis nunc. Aenean metus nibh, consequat id ligula sed, elementum porta risus. Quisque quis mi in mi tempor efficitur.</string>
    <string name="create_new_category">Create New Category!</string>
    <string name="name">Name:</string>
    <string name="create">Create</string>
    <string name="you_earned_points" translatable="false">____</string>
    <string name="you_earned">You earned</string>
    <string name="points">points!</string>
    <string name="info" translatable="false">Info</string>
    <string name="addCategory">Add Category</string>
    <string name="addGoal">Add Goal</string>
</resources>
