<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.golie.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.golie.ui.category.CategoryFragment"
        android:label="@string/title_category" />
    <fragment
        android:id="@+id/nav_addGoal"
        android:name="com.example.golie.ui.category.addGoal.AddGoalFragment"
        android:label="Add Goal"
        tools:layout="@layout/add_goal_fragment" />
    <fragment
        android:id="@+id/nav_shop"
        android:name="com.example.golie.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/shop_fragment" />
    <fragment
        android:id="@+id/nav_createReward"
        android:name="com.example.golie.ui.shop.reward.CreateReward"
        android:label="@string/create_reward"
        tools:layout="@layout/create_reward_fragment" />
    <fragment
        android:id="@+id/nav_finishedGoal"
        android:name="com.example.golie.ui.category.finishedGoal.FinishedGoalFragment"
        android:label="@string/dialog_finishedGoal"
        tools:layout="@layout/finished_goal_fragment" />
    <fragment
        android:id="@+id/nav_addCategory"
        android:name="com.example.golie.ui.home.addCategory.AddCategoryFragment"
        android:label="Add Category"
        tools:layout="@layout/add_category_fragment" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.golie.ui.home.settings.SettingsFragment"
        android:label="Settings Fragment"
        tools:layout="@layout/settings_fragment" />
    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.golie.ui.home.settings.info.InfoFragment"
        android:label="@android:string/status_bar_notification_info_overflow"
        tools:layout="@layout/info_fragment" />
    <fragment
        android:id="@+id/nav_chooseFavCategory"
        android:name="com.example.golie.ui.home.settings.chooseFavoriteFragment.ChooseFavoriteFragment"
        android:label="Choose Fav Category"
        tools:layout="@layout/choose_favorite_fragment" />
    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.golie.ui.favorite.FavoriteFragment"
        android:label="Favorite"
        tools:layout="@layout/favorite_fragment" />
</navigation>